cabal-version:       >=1.10
name:                hackerrankc-remix
version:             0.1.0.0
license-file:        LICENSE
author:              luisantonioig
maintainer:          c-remix@hotmail.es
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     MyLib
  build-depends:       base >=4.13 && <4.14
  default-language:    Haskell2010

executable hackerrankc-remix
  main-is:             Main.hs
  other-modules:       MyLib
  build-depends:       base >=4.13 && <4.14, hackerrankc-remix
  default-language:    Haskell2010

test-suite hackerrankc-remix-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             MyLibTest.hs
  build-depends:       base >=4.13 && <4.14
